[gd_scene load_steps=7 format=3 uid="uid://d3g1yylipce4m"]

[ext_resource type="Script" path="res://src/ui/options_menu/options_menu.gd" id="1_osl1r"]
[ext_resource type="Script" path="res://src/ui/options_menu/remap_button.gd" id="2_ytlyr"]

[sub_resource type="InputEventKey" id="InputEventKey_cnd1i"]
device = -1
keycode = 4194320

[sub_resource type="InputEventKey" id="InputEventKey_l2mj6"]
device = -1
keycode = 4194319

[sub_resource type="InputEventKey" id="InputEventKey_ukgas"]
device = -1
keycode = 4194321

[sub_resource type="InputEventKey" id="InputEventKey_hac0i"]
device = -1
keycode = 70
unicode = 102

[node name="OptionsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_osl1r")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 450
theme_override_constants/margin_top = 200
theme_override_constants/margin_right = 450
theme_override_constants/margin_bottom = 200

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TabContainer" type="TabContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 32

[node name="Graphics and sound" type="TabBar" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="ResolutionLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resolution"

[node name="ResolutionButton" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="WindowModeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Window mode
"

[node name="WindowModeButton" type="OptionButton" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
item_count = 4
selected = 3
popup/item_0/text = "Full Screen"
popup/item_0/id = 0
popup/item_1/text = "Borderless Full Screen"
popup/item_1/id = 1
popup/item_2/text = "Borderless Window"
popup/item_2/id = 2
popup/item_3/text = "Window"
popup/item_3/id = 3

[node name="GeneralVolumeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "General volume
"

[node name="GeneralVolumeSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="MusicVolumeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music volume"

[node name="MusicVolumeSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="EffectsVolumeLabel" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Effects volume
"

[node name="EffectsVolumeSlider" type="HSlider" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Keyboard" type="TabBar" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 250
theme_override_constants/v_separation = 15
columns = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Jump"

[node name="JumpButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "UP"
script = ExtResource("2_ytlyr")
action = "jump"
keycode = 4194320
test = SubResource("InputEventKey_cnd1i")

[node name="Label2" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Move Left
"

[node name="MoveLeftButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "LEFT"
script = ExtResource("2_ytlyr")
action = "run_left"
keycode = 4194319
test = SubResource("InputEventKey_l2mj6")

[node name="Label3" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Move Right"

[node name="MoveRightButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RIGHT"
script = ExtResource("2_ytlyr")
action = "run_right"
keycode = 4194321
test = SubResource("InputEventKey_ukgas")

[node name="Label4" type="Label" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Attack"

[node name="AttackButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Keyboard/MarginContainer/ScrollContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "F"
script = ExtResource("2_ytlyr")
action = "attack"
keycode = 70
test = SubResource("InputEventKey_hac0i")

[node name="ReturnButton" type="Button" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Return
"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer/ResolutionButton" to="." method="_on_resolution_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer/WindowModeButton" to="." method="_on_window_mode_button_item_selected"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer/GeneralVolumeSlider" to="." method="_on_general_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/TabContainer/Graphics and sound/MarginContainer/GridContainer/EffectsVolumeSlider" to="." method="_on_effects_volume_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Panel/MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
